networking/external-access-static-host-based/ingress-service-hostbased.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-with-sni
  namespace: confluent
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
        - kafka.aks.shapeblock.xyz
        - b0.aks.shapeblock.xyz
        - b1.aks.shapeblock.xyz
        - b2.aks.shapeblock.xyz
        - controlcenter.aks.shapeblock.xyz
        - ksqldb.aks.shapeblock.xyz
        - connect.aks.shapeblock.xyz
        - schemaregistry.aks.shapeblock.xyz
  rules:
    - host: kafka.aks.shapeblock.xyz
      http:
        paths:
          - backend:
              serviceName: kafka-bootstrap
              servicePort: 9092
    - host: b0.aks.shapeblock.xyz
      http:
        paths:
          - backend:
              serviceName: kafka-0-internal
              servicePort: 9092
    - host: b1.aks.shapeblock.xyz
      http:
        paths:
          - backend:
              serviceName: kafka-1-internal
              servicePort: 9092
    - host: b2.aks.shapeblock.xyz
      http:
        paths:
          - backend:
              serviceName: kafka-2-internal
              servicePort: 9092
    - host: controlcenter.aks.shapeblock.xyz
      http:
        paths:
          - backend:
              serviceName: controlcenter-0-internal
              servicePort: 9021
    - host: ksqldb.aks.shapeblock.xyz
      http:
        paths:
          - backend:
              serviceName: ksqldb-bootstrap
              servicePort: 8088
    - host: connect.aks.shapeblock.xyz
      http:
        paths:
          - backend:
              serviceName: connect-bootstrap
              servicePort: 8083
    - host: schemaregistry.aks.shapeblock.xyz
      http:
        paths:
          - backend:
              serviceName: schemaregistry-bootstrap
              servicePort: 8081
